log
Thu 16 May 2024 08:58:00 PM UTC: 
 tests:  0|5
total_score: 0/70
d1ec8c1
Thu 16 May 2024 09:11:16 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  2|4
total_score: 15/70
5791920
Thu 16 May 2024 09:20:11 PM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  0|5
total_score: 0/70
3e1d858
Thu 16 May 2024 09:23:22 PM UTC: 
 sudoku.c | 48 +++++++++++++++++-------------------------------
 1 file changed, 17 insertions(+), 31 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
426e406
Thu 16 May 2024 09:23:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
3a5afb1
Thu 16 May 2024 09:28:10 PM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++-------------
 1 file changed, 23 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
2c5a881
Thu 16 May 2024 09:31:18 PM UTC: 
 sudoku.c | 36 +++++++++++++-----------------------
 1 file changed, 13 insertions(+), 23 deletions(-)
 tests:  5|3
total_score: 35/70
e26f848
Thu 16 May 2024 09:37:20 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++--------------
 1 file changed, 22 insertions(+), 14 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:5: error: unknown type name ‘bool’
   72 |     bool found_empty_cell = false;
      |     ^~~~
sudoku.c:4:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    3 | #include "list.h"
  +++ |+#include <stdbool.h>
    4 | 
sudoku.c:72:29: error: ‘false’ undeclared (first use in this function)
   72 |     bool found_empty_cell = false;
      |                             ^~~~~
sudoku.c:72:29: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
sudoku.c:72:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:78:36: error: ‘true’ undeclared (first use in this function)
   78 |                 found_empty_cell = true; // Indicar que se encontró una celda vacía
      |                                    ^~~~
sudoku.c:78:36: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
sudoku.c:95:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
   95 |         freeList(list);
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
330f7fb
Thu 16 May 2024 09:37:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:95:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
   95 |         freeList(list);
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
4c4b9a7
Thu 16 May 2024 09:37:57 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
0f396d0
Thu 16 May 2024 09:39:33 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0ad7809
Thu 16 May 2024 09:39:49 PM UTC: 
 sudoku.c | 35 ++++++++++++-----------------------
 1 file changed, 12 insertions(+), 23 deletions(-)
 tests:  5|3
total_score: 35/70
13bf3b7
Thu 16 May 2024 09:41:09 PM UTC: 
 sudoku.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
079676b
Thu 16 May 2024 10:02:18 PM UTC: 
 sudoku.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
f77a933
Thu 16 May 2024 10:09:14 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  10|0
total_score: 70/70
eaad1c0
